--- a/index.html
+++ b/index.html
@@ -16,77 +16,10 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
-        <ol class="pokemons">
-            <li class="pokemon">
-                <span class="number">1</span>
-                <span class="name">bulbasour</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li>grass</li>
-                        <li>poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon">
-                </div> 
-            </li>
-            <li class="pokemon">
-                <span class="number">1</span>
-                <span class="name">bulbasour</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li>grass</li>
-                        <li>poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon">
-                </div> 
-            </li>
-            <li class="pokemon">
-                <span class="number">1</span>
-                <span class="name">bulbasour</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li>grass</li>
-                        <li>poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon">
-                </div> 
-            </li>
-            <li class="pokemon">
-                <span class="number">1</span>
-                <span class="name">bulbasour</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li>grass</li>
-                        <li>poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon">
-                </div> 
-            </li>
-            <li class="pokemon">
-                <span class="number">1</span>
-                <span class="name">bulbasour</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li>grass</li>
-                        <li>poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon">
-                </div> 
-            </li>
-            <li class="pokemon">
-                <span class="number">1</span>
-                <span class="name">bulbasour</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li>grass</li>
-                        <li>poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="pokemon">
-                </div> 
-            </li>
-        
+        <ol id="pokemonList" class="pokemons">
         </ol>
     </section>
-
+    <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
