--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
     <link rel="stylesheet" href="./assets/css/pokedex.css">
 </head>
 <body>
+    <div class="backimg"></div>
     <section class="content">
-        <h1>Pokedex</h1>
+        <div class="conteiner">
+            <h1>Pokédex</h1>
+            <div class="display">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
         <ol id="pokemonList" class="pokemons">
         </ol>
     </section>
+    <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
