--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="backimg"></div>
     <section class="content">
         <div class="conteiner">
-            <h1>Pokédex</h1>
+            <h1 id="Title">Pokédex</h1>
             <div class="display">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -26,6 +26,10 @@
         </div>
         <ol id="pokemonList" class="pokemons">
         </ol>
+        <div class="pagination">
+            <button type="button"id="LoadLessButton" disabled>Prev</button>
+            <button type="button"id="LoadMoreButton">Next</button>
+        </div>
     </section>
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
