--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="./assets/css/pokedex.css">
 </head>
 <body>
-    <div class="backimg"></div>
+    <div id="detailCard">
+    </div>
+    <div id="backimg"></div>
     <section class="content">
         <div class="conteiner">
             <h1 id="Title">Pokédex</h1>
@@ -30,6 +32,7 @@
             <button type="button"id="LoadLessButton" disabled>Prev</button>
             <button type="button"id="LoadMoreButton">Next</button>
         </div>
+        
     </section>
     <script src="./assets/js/pokemon-model.js"></script>
     <script src="./assets/js/poke-api.js"></script>
